fix: horizontal scroll removed from navbar menu on mobile

--- a/styles/partials/navbar.css
+++ b/styles/partials/navbar.css
@@ -20,6 +20,7 @@ header{
     background-color: var(--primary-solid);
     border-bottom: 1px solid var(--primary-100);
     width: 100%;
+    overflow-x: hidden;
 }
 
 .navbar {
